# FTF-Calculator

./: .gitignore  LICENSE  app.py  ftf_items.json  pyproject.toml  requirements.txt  setup.cfg
backend/: Number_Extract.py  Text_Extract.py  desktop.ini  main.py
frontend/: app.js  calculator.html  guide.html  index.html  style.css  trade.html  trade.js
