[build-system]
requires = [
    "setuptools>=65.5.1",
    "wheel>=0.41.2",
]
build-backend = "setuptools.build_meta"

[project]
name = "ftf_inv_calc"
version = "0.1.0"
description = "FTF Inventory Calculator"
requires-python = ">=3.8"

[project.dependencies]
Flask = "2.0.1"
Werkzeug = "2.2.2"
gunicorn = "20.1.0"
opencv-python-headless = "4.8.0.74"
numpy = "1.24.3"
Pillow = "9.5.0"
pytesseract = "0.3.10"
python-dotenv = "1.0.0"
fuzzywuzzy = "0.18.0"
python-Levenshtein = "0.21.1"
